<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data class="com.ray.mvvm.sample.view.simple.binding.ActivitySimplePageBinding">

        <import type="com.ray.mvvm.sample.view.simple.vm.SimplePageVM" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="SimplePageVM" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.ray.mvvm.sample.view.simple.SimplePageActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_l">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:hintAnimationEnabled="@{viewModel.hintAnimEnabled}"
                app:hintEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_hint"
                    android:text="@={viewModel.input, default = null}" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/ck_enable_upper_case"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.enableUpperCase, default = true}"
                android:text="@string/enable_to_upper_case" />

            <Button
                android:id="@+id/btn_uppercase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel::onToUpperCase}"
                android:text="@string/to_upper_case"
                android:visibility="@{viewModel.enableUpperCase ? View.VISIBLE : View.GONE, default = visible}" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel::onSubmiteClicked}"
                android:text="@string/submite" />
        </LinearLayout>

    </ScrollView>
</layout>